# animeList

./: docker-compose.yml  package-lock.json
backend/: Dockerfile  auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
frontend/: Dockerfile  index.html
frontend/src/: App.jsx  main.jsx
frontend/src/api/: auth.js
frontend/src/components/: AnimeCard.jsx  FavoriteCard.jsx  NavBar.jsx  PrivateRoute.jsx
frontend/src/css/: AnimeCard.css  Favorites.css  Home.css  NavBar.css  SignUp.css  index.css
frontend/src/pages/: Favorites.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  SignUp.jsx
